<resources>
    <string name="app_name">ChatLibrary</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signin">Sign in</string>
    <string name="register">Register</string>
    <string name="regiser_Name">Login</string>
    <string name="regiser_Password">Password</string>
    <string name="regiser_Confirm_Password">Confirm Password</string>
    <string name="regiser_e_mail">E-mail</string>
    <string name="regiser_First_Name">First Name</string>
    <string name="regiser_Last_Name">Last Name</string>
    <string name="regiser_Sex">Sex</string>
    <string name="regiser_Pesel">Pesel</string>
    <string name="regiser_City">City</string>
    <string name="regiser_Postal_Code">Postal Code</string>
    <string name="regiser_Street">Street</string>
    <string name="regiser_Home_Number">Home Number</string>
    <string name="regiser_Type">Type Addres</string>
    <string name="sex_female">Female</string>
    <string name="sex_male">Male</string>
    <string name="sex_living">Living</string>
    <string name="sex_correspondance">Correspondance</string>
    <string name="regiser_Postal_City">Postal City</string>
    <string name="failed_to_connect">Failed to connect with server</string>
	<string name="btn_send">Send!</string>
    <string name="start_chat">Start chat!</string>
    <string name="choose_person">Talk with: </string>
    <string name="action_sign_out">Sign out</string>
    <string name="regiser_dataOfBirthday">Data Of Birthday</string>
    <string name="no_selected_user">No selected user</string>
    <string name="choose_users">Choose users :</string>
    <string-array name="copyDialog">
        <item>Copy text</item>
    </string-array>
    <string-array name="wrongDialog">
        <item>Send again</item>
        <item>Copy text</item>
    </string-array>
    <string-array name="montsOfYear">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
