<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="30dp">

        <EditText
            android:id="@+id/regiser_Name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/regiser_Name"/>

        <EditText
            android:id="@+id/regiser_Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/regiser_Password"/>

        <EditText
            android:id="@+id/regiser_Confirm_Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/regiser_Confirm_Password"/>

        <EditText
            android:id="@+id/regiser_e_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/regiser_e_mail"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:onClick="regiser"/>

    </LinearLayout>

</FrameLayout>